# stackb_ruby_grpc_compile_repro

./: BUILD.bazel  WORKSPACE  test.proto
