load("@build_stack_rules_proto//ruby:ruby_proto_compile.bzl", "ruby_proto_compile")
load("@build_stack_rules_proto//ruby:ruby_proto_library.bzl", "ruby_proto_library")
load("@build_stack_rules_proto//ruby:ruby_grpc_compile.bzl", "ruby_grpc_compile")

proto_library(
    name = "test_proto",
    srcs = ["test.proto"],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:timestamp_proto"],
)

ruby_proto_compile(
    name = "test_ruby_proto",
    deps = [":test_proto"],
)

ruby_proto_library(
    name = "test_ruby_proto_lib",
    deps = [":test_proto"],
)

ruby_grpc_compile(
    name = "test_ruby_grpc",
    deps = [":test_proto"],
    verbose = 4,
)
